// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`runtime/types/nuxt-swa.d.ts.template > { authProviders: [ 'github', 'twitter', 'line' ], customRoles: [ 'administrator' ] } renders expected Type Definition 1`] = `
"// Generated by nuxt-swa

declare module '#app' {
  interface PageMeta {
    /** List of roles required to view this page */
    allowedRoles?:
      | Exclude<UserRole, 'anonymous'>
      | Exclude<UserRole, 'anonymous'>[]
  }
}

/**
 * Authentication Provider list to login your app.
 * @see https://learn.microsoft.com/azure/static-web-apps/authentication-custom#configure-a-custom-identity-provider
 */
type IdentityProvider =
  | 'github'
  | 'twitter'
  | 'line'

/**
 * User roles to use in your app.
 * @see https://learn.microsoft.com/azure/static-web-apps/authentication-custom#manage-roles
 */
type UserRole =
  | 'anonymous'
  | 'authenticated'
  | 'administrator'

export {}
"
`;

exports[`runtime/types/nuxt-swa.d.ts.template > { authProviders: [], customRoles: [] } renders expected Type Definition 1`] = `
"// Generated by nuxt-swa

/**
 * User roles to use in your app.
 * @see https://learn.microsoft.com/azure/static-web-apps/authentication-custom#manage-roles
 */
type UserRole =
  | 'anonymous'
  | 'authenticated'

export {}
"
`;

exports[`runtime/types/nuxt-swa.d.ts.template > { customRoles: [], authProviders: [ 'aad', 'github' ] } renders expected Type Definition 1`] = `
"// Generated by nuxt-swa

declare module '#app' {
  interface PageMeta {
    /** List of roles required to view this page */
    allowedRoles?:
      | Exclude<UserRole, 'anonymous'>
      | Exclude<UserRole, 'anonymous'>[]
  }
}

/**
 * Authentication Provider list to login your app.
 * @see https://learn.microsoft.com/azure/static-web-apps/authentication-custom#configure-a-custom-identity-provider
 */
type IdentityProvider =
  | 'aad'
  | 'github'

/**
 * User roles to use in your app.
 * @see https://learn.microsoft.com/azure/static-web-apps/authentication-custom#manage-roles
 */
type UserRole =
  | 'anonymous'
  | 'authenticated'

export {}
"
`;
